Atcoder/ABC過去問/B/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/B/ABC161B.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/B/ABC161B.cpp:306:5: error: expected ';' before 'll'
  306 |     ll sm=sum(a);
      |     ^~
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/B/ABC161B.cpp:308:13: error: 'sm' was not declared in this scope; did you mean 'm'?
  308 |       if(i>=sm/(4*m))ans++;
      |             ^~
      |             m
